--- a/www/songbird/src/AppBundle/Resources/views/Admin/standard_layout.html.twig
+++ b/www/songbird/src/AppBundle/Resources/views/Admin/standard_layout.html.twig
@@ -48,7 +48,10 @@
     <ul>
         {% if is_granted('ROLE_SUPER_ADMIN') %}
         <li><a href="{{ path('admin_app_user_list') }}">{{ 'admin.link.user_management' | trans({}, 'app') }}</a></li>
+        <li><a href="{{ path('admin_app_gallery_list') }}">{{ 'admin.link.gallery_management' | trans({}, 'app') }}</a></li>
+        <li><a href="{{ path('admin_app_media_list') }}">{{ 'admin.link.media_management' | trans({}, 'app') }}</a></li>
         {% endif %}
+
         <li><a href="{{ path('admin_app_user_show', {'id' : app.user.id}) }}">{{ 'admin.link.my_profile' | trans({}, 'app') }}</a></li>
     </ul>
 {% endblock %}
