--- a/www/songbird/src/AppBundle/Resources/views/Admin/standard_layout.html.twig
+++ b/www/songbird/src/AppBundle/Resources/views/Admin/standard_layout.html.twig
@@ -2,7 +2,7 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    <link rel="stylesheet" href="{{ asset('bundles/app/css/styles.css') }}">
+    <link rel="stylesheet" href="{{ asset('minified/css/styles.css') }}">
 {% endblock %}
 
 {% block logo %}
