--- a/www/songbird/src/Songbird/NestablePageBundle/Resources/views/Admin/tree.html.twig
+++ b/www/songbird/src/Songbird/NestablePageBundle/Resources/views/Admin/tree.html.twig
@@ -1,13 +1,13 @@
 {% for v in tree %}
     <li class='dd-item' data-id='{{ v.getId() }}'>
         <div class='dd-handle'>
-            <a class="dd-nodrag" href="{{ path('page_edit', {id: v.getId()}) }}">{{ v.getPageMetas()[0].getPageTitle() }}</a>
+            <a class="dd-nodrag" href="{{ path('admin_songbird_page_edit', {id: v.getId()}) }}">{{ v.getSlug() }}</a>
         </div>
 
         {% set children = v.getChildren()|length %}
         {% if children > 0 %}
             <ol class='dd-list'>
-                {% include "SongbirdNestablePageBundle:Page:tree.html.twig" with { 'tree':v.getChildren() } %}
+                {% include "SongbirdNestablePageBundle:Admin:tree.html.twig" with { 'tree':v.getChildren() } %}
             </ol>
         {% endif %}
     </li>
