--- a/www/songbird/src/AppBundle/Resources/views/Admin/standard_layout.html.twig
+++ b/www/songbird/src/AppBundle/Resources/views/Admin/standard_layout.html.twig
@@ -49,6 +49,7 @@
         {% if is_granted('ROLE_SUPER_ADMIN') %}
         <li><a href="{{ path('admin_app_user_list') }}">{{ 'admin.link.user_management' | trans({}, 'app') }}</a></li>
         <li><a href="{{ path('admin_app_gallery_list') }}">{{ 'admin.link.gallery_management' | trans({}, 'app') }}</a></li>
+        <li><a href="{{ path('admin_page_list') }}">{{ 'admin.link.page_management' | trans({}, 'app') }}</a></li>
         <li><a href="{{ path('admin_app_media_list') }}">{{ 'admin.link.media_management' | trans({}, 'app') }}</a></li>
         <li><a href="{{ path('admin_app_userlog_list') }}">{{ 'admin.link.user_log' | trans({}, 'app') }}</a></li>
         {% endif %}
