--- a/www/songbird/src/AppBundle/Resources/views/Admin/list.html.twig
+++ b/www/songbird/src/AppBundle/Resources/views/Admin/list.html.twig
@@ -6,12 +6,14 @@
 {% endblock %}
 
 {% block sonata_admin_content %}
+
 	<div class="alert alert-dismissable">
 		{{ 'flash_reorder_instructions' | trans({}, 'BpehNestablePageBundle') }}
 	</div>
 
     <button type="button" onclick="$('.dd').nestable('expandAll')">Expand All</button>
     <button type="button" onclick="$('.dd').nestable('collapseAll')">Collapse All</button>
+    <button type="button" onclick="window.location='{{ path('admin_page_create') }}'">{{ 'link_action_create' | trans({}, 'SonataAdminBundle') }}</button>
     <div id="nestable" class="dd">
         <ol class="dd-list">
             {% include "AppBundle:Admin:tree.html.twig" with { 'tree':tree } %}
