--- a/www/songbird/src/AppBundle/Resources/public/css/signin.css
+++ b/www/songbird/src/AppBundle/Resources/public/css/signin.css
@@ -1,4 +1,4 @@
-body {
+/*body {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #eee;
@@ -41,4 +41,4 @@ body {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-}
+}*/
